--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.2.28",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "tanstack-query": "^1.0.0",
     "zustand": "^5.0.3"
   },
